# Model-Supply-Chain-Auditor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  OVERHAUL.md  README.md  SECURITY.md  WHITEPAPER.md  provenance.json  pyproject.toml  requirements.txt  rules.yaml  sarif_output.json  sbom.json  scan.py  smoke_test.sh  verify.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/scan/: action.yml
.github/workflows/: ci.yml
docs/: DESIGN.md  POLICY_GATE.md  THREAT_MODEL.md  policy.example.yaml
src/: __init__.py  __main__.py  cli.py  provenance.py  safetensors_scanner.py
src/scanners/: __init__.py  pickle_scanner.py  sarif.py
src/signing/: __init__.py  model_signer.py
tests/: conftest.py  test_2026_attacks.py  test_cli.py  test_coverage.py  test_expanded_scanner.py  test_pickle_scanner.py  test_provenance.py  test_safetensors.py  test_sarif.py  test_signing.py
