[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-supply-chain-auditor"
version = "0.4.0"
description = "Detects malicious code in ML model files. Static analysis of pickle bytecode + Ed25519 cryptographic signing."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Pooja Kiran", email = "poojakira@users.noreply.github.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "cryptography>=44.0",
    "numpy>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[project.scripts]
msca = "src.cli:main"

[project.urls]
Homepage = "https://github.com/poojakira/Model-Supply-Chain-Auditor"
Repository = "https://github.com/poojakira/Model-Supply-Chain-Auditor"
Issues = "https://github.com/poojakira/Model-Supply-Chain-Auditor/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if __name__"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
