[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-supply-chain-auditor"
version = "0.4.1"
description = "Detects malicious code in ML model files. Static analysis of pickle bytecode + Ed25519 cryptographic signing."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Pooja Kiran", email = "poojakira@users.noreply.github.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "cryptography>=44.0.0,<48.0.0",
    "numpy>=2.0.2,<3.0.0",
    "PyYAML>=6.0.2,<8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.8.4,<0.10.0",
    "mypy>=1.14.0,<2.0.0",
    "pip-audit>=2.7.3,<3.0.0",
    "bandit>=1.8.0,<2.0.0",
    "cyclonedx-python>=5.3.0,<6.0.0",
]

[project.scripts]
msca = "src.cli:main"

[project.urls]
Homepage = "https://github.com/poojakira/Model-Supply-Chain-Auditor"
Repository = "https://github.com/poojakira/Model-Supply-Chain-Auditor"
Issues = "https://github.com/poojakira/Model-Supply-Chain-Auditor/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if __name__"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "S", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert_used in test code is OK
